--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>lucent-llm-lens</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>AI Brand Intelligence Platform - Professional Analytics Suite</title>
+    <meta name="description" content="Comprehensive AI visibility analysis and brand intelligence platform. Get deep insights into your brand's performance across AI platforms with actionable recommendations." />
+    <meta name="author" content="AI Brand Intelligence" />
 
-    <meta property="og:title" content="lucent-llm-lens" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="AI Brand Intelligence Platform - Professional Analytics Suite" />
+    <meta property="og:description" content="Comprehensive AI visibility analysis and brand intelligence platform. Get deep insights into your brand's performance across AI platforms with actionable recommendations." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
